	PR tree-optimization/37709 	* tree.c (block_ultimate_origin): Move here from dwarf2out. 	* tree.h (block_ultimate_origin): Declare. 	* dwarf2out.c (block_ultimate_origin): Move to tree.c 	* tree-ssa-live.c (remove_unused_scope_block_p): 	Eliminate blocks containig no instructions nor live variables nor 	nested blocks. 	(dump_scope_block): New function. 	(remove_unused_locals): Enable removal of dead blocks by default; 	enable dumping at TDF_DETAILS.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144381 138bc75d-0d04-0410-961f-82ee72b054a4